--- a/index.html
+++ b/index.html
@@ -2211,11 +2211,11 @@
 
                 <div id="large_images">
                     <div id="group_exercise">
-                        <img src="group_exercising.jpg">
+                        <img src="./images/group_exercising.jpg">
                         <span class="img_text1">GROUP EXERCISING</span>
                     </div>
                     <div id="weight_training">
-                        <img src="weight_training.jpg">
+                        <img src=".weight_training.jpg">
                         <span class="img_text1"> &nbsp;&nbsp;WEIGHT TRAINING </span>
                     </div>
                     <div id="weight_training">
