--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
         .container {
-            background-image: url('gym3bg.jpg');
+            background-image: url('./Images/gym3bg.jpg');
             width: 1500px;
             height: 850px;
             background-position: cover;
