--- a/index.html
+++ b/index.html
@@ -2196,7 +2196,7 @@
             <div id="services">
                 <div id="short_images">
                     <div id="boxing">
-                        <img src="boxing.jpg">
+                        <img src="./Images/boxing.jpg">
                         <span class="img_text">BOXING</span>
                     </div>
                     <div id="yoga">
