--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         .container3 {
             width: 1500px;
             height: 680px;
-            background-image: url(gym4.2bg.jpg);
+            background-image: url(./Images/gym4.2bg.jpg);
             background-size: 100% 100%;
             background-position: cover;
             background-repeat: no-repeat;
@@ -610,10 +610,7 @@
         }
 
         .container_6_1 {
-            /* position: absolute; */
-            /* width: 1300px; */
-            /* height: 748px; */
-            justify-content: center;
+             justify-content: center;
             display: flex;
             flex-wrap: wrap;
             margin: 0px 20px
@@ -2142,7 +2139,7 @@
         </div>
         <!-- Home page start -->
         <div class="logo">
-            <img src="new_logo1.jpg" alt="image loading">
+            <img src="./Images/new_logo1.jpg" alt="image loading">
         </div>
 
         <h1 id="text">WELCOME To <span id="a1">Fitness Adda </span></h1>
@@ -2155,28 +2152,28 @@
         <h3 id="top_heading"><span class="heading_1">WHY CHOOSE US</span></h3>
         <h1 id="heading2">PUSH YOUR LIMIT FORWARD</h1>
         <div class="boxes">
-            <div id="box1" class="box"><img src="icon11.png" class="images">
+            <div id="box1" class="box"><img src="./Images/icon11.png" class="images">
                 <h3 class="heading_img">Modern Equipment</h3>
                 <p class="paragraph_img">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod
                     <br> tempor
                     ncididunt ut dolore..</li>
                 </p>
             </div>
-            <div id="box2" class="box"><img src="icon2.png" class="images">
+            <div id="box2" class="box"><img src="./Images/icon2.png" class="images">
                 <h3 class="heading_img">Nutrition Plan</h3>
                 <p class="paragraph_img">Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit, sed do eiusmod
                     <br>tempor
                     ncididunt ut dolore.. </li>
                 </p>
             </div>
-            <div id="box3" class="box"><img src="icon3.png" class="images">
+            <div id="box3" class="box"><img src="./Images/icon3.png" class="images">
                 <h3 class="heading_img">Professional Training</h3>
                 <p class="paragraph_img">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod
                     <br>tempor
                     ncididunt ut dolore.. </li>
                 </p>
             </div>
-            <div id="box4" class="box"><img src="icon4.png" class="images">
+            <div id="box4" class="box"><img src="./Images/icon4.png" class="images">
                 <h3 class="heading_img">Fresh Environment</h3>
                 <p class="paragraph_img">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod
                     <br>tempor
@@ -2200,26 +2197,26 @@
                         <span class="img_text">BOXING</span>
                     </div>
                     <div id="yoga">
-                        <img src="yoga.jpg">
+                        <img src="./Images/yoga.jpg">
                         <span class="img_text">YOGA</span>
                     </div>
                     <div id="cardio">
-                        <img src="cardio.jpg">
+                        <img src="./Images/cardio.jpg">
                         <span class="img_text">CARDIO</span>
                     </div>
                 </div>
 
                 <div id="large_images">
                     <div id="group_exercise">
-                        <img src="./images/group_exercising.jpg">
+                        <img src="./Images/group_exercising.jpg">
                         <span class="img_text1">GROUP EXERCISING</span>
                     </div>
                     <div id="weight_training">
-                        <img src=".weight_training.jpg">
+                        <img src="./Images/weight_training.jpg">
                         <span class="img_text1"> &nbsp;&nbsp;WEIGHT TRAINING </span>
                     </div>
                     <div id="weight_training">
-                        <img src="bodyweight.webp">
+                        <img src="./Images/bodyweight.webp">
                         <span class="img_text1"> &nbsp;&nbsp;BODY WEIGHT TRAINING </span>
                     </div>
                 </div>
@@ -2286,9 +2283,9 @@
     <div class="container5">
         <div class="image_gallery">
             <div class="first_row_image">
-                <img src="wallpaper2.jpeg" class="" id="first_row_image_1">
-                <img src="wallpaper1.webp" alt="" id="first_row_image_2">
-                <img src="wallpaper3.webp" alt="" id="first_row_image_3">
+                <img src="./Images/wallpaper2.jpeg" class="" id="first_row_image_1">
+                <img src="./Images/wallpaper1.webp" alt="" id="first_row_image_2">
+                <img src=./Images/"wallpaper3.webp" alt="" id="first_row_image_3">
             </div>
             <div class="second_row_image">
                 <img src="wallpaper8.jpeg" alt="" id="second_row_image_1">
