Update Images From Images Folder

--- a/index.html
+++ b/index.html
@@ -2288,9 +2288,9 @@
                 <img src=./Images/"wallpaper3.webp" alt="" id="first_row_image_3">
             </div>
             <div class="second_row_image">
-                <img src="wallpaper8.jpeg" alt="" id="second_row_image_1">
-                <img src="wallpaper9.webp" alt="" id="second_row_image_2">
-                <img src="wallpaper10.jpeg" alt="" id="second_row_image_3">
+                <img src="./Images/wallpaper8.jpeg" alt="" id="second_row_image_1">
+                <img src="./Images/wallpaper9.webp" alt="" id="second_row_image_2">
+                <img src="./Images/wallpaper10.jpeg" alt="" id="second_row_image_3">
             </div>
         </div>
     </div>
@@ -2309,9 +2309,9 @@
 
                 </div>
                 <div class="trainer_image">
-                    <img src="trainer.webp" alt="image loading">
-                    <img src="trainer2.jpeg" alt="image loading">
-                    <img src="trainer3.webp" alt="image loading" id="trainer_image3">
+                    <img src="./Images/trainer.webp" alt="image loading">
+                    <img src="./Images/trainer2.jpeg" alt="image loading">
+                    <img src="./Images/trainer3.webp" alt="image loading" id="trainer_image3">
                 </div>
             </div>
         </div>
@@ -2322,11 +2322,11 @@
     <a name="contact"></a>
     <div class="container7">
         <div class="container7_1">
-            <div id="location"><img src="location.icon.png" alt="icon loading"><span id="location_address"> Indira Nagar
+            <div id="location"><img src="./Images/location.icon.png" alt="icon loading"><span id="location_address"> Indira Nagar
                     A block Lekhraj Market 226026 oppsite to ABC school </span></div>
-            <div id="mobile"><img src="mobile.icon.png" alt="icon loading"><span id="mobile_no"> 9988776655 <br>
+            <div id="mobile"><img src="./Images/mobile.icon.png" alt="icon loading"><span id="mobile_no"> 9988776655 <br>
                     9876543210 <br>0521-4536</span></div>
-            <div id="mail"><img src="mail.icon1.png" alt="icon loading"><span id="mail_address"> abc@gmail.com
+            <div id="mail"><img src="./Images/mail.icon1.png" alt="icon loading"><span id="mail_address"> abc@gmail.com
                     <br>xyz@gmail.com <br>123@gmail.com</span></div>
         </div>
         <a name="about"></a>
@@ -2334,7 +2334,7 @@
             <!-- 10th page about to Gym important links and about section -->
 
         <div class="container7_2">
-            <div id="about"><img src="new_logo1.jpg" alt="icon loading">
+            <div id="about"><img src="./Images/new_logo1.jpg" alt="icon loading">
                 <h3><a href="">Fitnes Adda</a></h3>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, perferendis</p>
             </div>
