--- a/index.html
+++ b/index.html
@@ -2285,7 +2285,7 @@
             <div class="first_row_image">
                 <img src="./Images/wallpaper2.jpeg" class="" id="first_row_image_1">
                 <img src="./Images/wallpaper1.webp" alt="" id="first_row_image_2">
-                <img src=./Images/"wallpaper3.webp" alt="" id="first_row_image_3">
+                <img src="./Images/wallpaper3.webp" alt="" id="first_row_image_3">
             </div>
             <div class="second_row_image">
                 <img src="./Images/wallpaper8.jpeg" alt="" id="second_row_image_1">
