Update Regarding responsiveness

--- a/index.html
+++ b/index.html
@@ -2115,6 +2115,12 @@
                 opacity: .8;
 
             }
+            .container4{
+             width: 500px;
+           }
+           .container6{
+            width: 500px;
+           }
 
 
 
